--- a/css小部件/shape.less
+++ b/css小部件/shape.less
@@ -1,51 +1,78 @@
+// css reset start
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, samp,
+small, strong, sub, sup, var,b, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+    margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+}
 
 html{
-    // 例: 1.2rem = 12px
-    //font-size: 10px;
+    min-width: 320px;
 }
 
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
-    padding: 0;
-    margin: 0;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section { 
+    display:block;
 }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+body {
+    line-height:1;
+    background: #f8f8f8;
 }
 
-fieldset,img {
-    border: 0;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+nav ul {
+    list-style:none;
 }
 
-address,caption,cite,code,dfn,em,th,var {
-    font-weight: 400;
+blockquote, q {
+    quotes:none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content:'';
+    content:none;
+}
+
+a {
+    margin:0;
+    padding:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+    text-decoration: none;
+}
+li{
+    list-style-type: none;
+}
+input {
+    vertical-align:middle;
+}
+
+i,em{
     font-style: normal;
 }
 
-ol,ul {
-    list-style: none;
+textarea{
+    padding: 0; 
+    outline: none;
 }
-
-caption,th {
-    text-align: left;
+.hidden{
+    display: none;
 }
-
-h1,h2,h3,h4,h5,h6 {
-    font-weight: 400;
-    font-size: 100%;
-}
-
-q:before,q:after {
-    content: '';
-}
-
-abbr,acronym {
-    border: 0;
-}
-
 body {
     color: #666666;
     -webkit-touch-callout: none;
@@ -67,9 +94,11 @@ body {
     font-weight: bold;
 }
 
-
+//QQ对话
 .main{
+    width: 220px;
     padding: 40px;
+    float: left;
     .item{
         width: 210px;
         height: 210px;
@@ -121,5 +150,199 @@ body {
                 border-radius: 0 0 60px 0;
             }
         }
+    }
+}
+
+//波纹
+.mod_focus{
+    width: 140px;
+    height: 60px;
+    float: left;
+    margin-top: 110px;
+    .mod_btn__big {
+        position: relative;
+        display: inline-block;
+        background: #39a8d4;
+        border: none;
+        color: #fff;
+        font-size: 16px;
+        text-align: center;
+        border-radius: 3px;
+        width: 120px;
+        height: 60px;
+        opacity: 0;
+        margin: 0 auto 26px;
+        border-radius: 4px;
+        -webkit-animation: .8s .9s ease-out forwards;
+        animation: .8s .9s ease-out forwards;
+        transform: translate3d(0, 20px, 0);
+        -webkit-transition: .3s ease-in;
+        transition: .3s ease-in;
+        &:hover{
+            color: #fff;
+            opacity: 0.85;
+            background-color: rgba(57,168,212,0.8);
+        }
+        
+        &::before,
+        &:after{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border-radius: 4px;
+            -webkit-animation: btn_wave 3s infinite;
+            animation: btn_wave 3s infinite;
+            box-shadow: 0 0 0 0 #39a8d4;
+        }
+        &::after{
+            -webkit-animation-delay: 1.5s;
+            animation-delay: 1.5s;
+        }
+
+        i{
+            width: 120px;
+            height: 60px;
+            display: block;
+            font-size: 20px;
+            line-height: 60px;
+            overflow: hidden;
+            text-align:center;
+        }
+    }
+    .animate_bg {
+        -webkit-animation-name: bg;
+        animation-name: bg;
+    }
+    .mod_btn__big--add {
+        position: relative;
+        width: 110px;
+        text-indent: 22px;
+        font-size: 14px;
+        overflow: hidden;
+        &::before{
+            position: absolute;
+            content: '';
+            width: 14px;
+            height: 2px;
+            background: #fff;
+            left: 18px;
+            top: 18px;
+        }
+        
+        &::after{
+            position: absolute;
+            content: '';
+            width: 2px;
+            height: 14px;
+            background: #fff;
+            left: 24px;
+            top: 12px;       
+        }
+    }
+    //动画 css3keyframes 规则 -> http://www.w3chtml.com/css3/rules/@keyframes.html
+    @-webkit-keyframes bg {
+        0% {
+            opacity: 0;
+            -webkit-transform: translate3d(0, 20px, 0)
+        }
+
+        100% {
+            opacity: 1;
+            -webkit-transform: translate3d(0, 0, 0)
+        }
+    }
+
+    @keyframes bg {
+        0% {
+            opacity: 0;
+            transform: translate3d(0, 20px, 0)
+        }
+
+        100% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0)
+        }
+    }
+
+    @-webkit-keyframes bg2 {
+        0% {
+            opacity: 0;
+            -webkit-transform: translate3d(0, 20px, 0) rotate(-45deg)
+        }
+
+        100% {
+            opacity: 1;
+            -webkit-transform: translate3d(0, 0, 0) rotate(-45deg)
+        }
+    }
+
+    @keyframes bg2 {
+        0% {
+            opacity: 0;
+            transform: translate3d(0, 20px, 0) rotate(-45deg)
+        }
+
+        100% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0) rotate(-45deg)
+        }
+    }
+
+    @-webkit-keyframes btn_wave {
+        0% {
+            box-shadow: 0 0 0 0 #39a8d4
+        }
+
+        0%,90% {
+            opacity: .7
+        }
+
+        to {
+            box-shadow: 0 0 0 9pt rgba(255,255,255,0);
+            opacity: 0
+        }
+    }
+
+    @keyframes btn_wave {
+        0% {
+            box-shadow: 0 0 0 0 #39a8d4
+        }
+
+        0%,90% {
+            opacity: .7
+        }
+
+        to {
+            box-shadow: 0 0 0 9pt rgba(255,255,255,0);
+            opacity: 0
+        }
+    }
+}
+
+//svg 倒计时圆形倒计时
+.svg{
+    width: 200px;
+    height: 200px;
+    margin-top: 40px;
+    float: left;
+    position: relative;
+    .alert-circle {
+        position: absolute;
+        left: 60px;
+        top: 60px;
+    }
+    .alert-sec-circle {
+        stroke-dashoffset: 0;
+        stroke-dasharray: 735;
+        transition: stroke-dashoffset 1s linear;
+    }
+
+    .alert-sec-text{
+        position: absolute;
+        top: 80px;
+        left: 81px;
     }
 }
