--- a/someCodeing/shape.less
+++ b/someCodeing/shape.less
@@ -70,6 +70,14 @@ textarea{
     padding: 0; 
     outline: none;
 }
+
+//自定义变量
+.border(@radius){
+    -webkit-border-radius: @radius;
+    -moz-border-radius: @radius;
+        border-radius: @radius;
+}
+
 .hidden{
     display: none;
 }
@@ -86,12 +94,18 @@ body {
     // font-family: "Helvetica Neue", "Helvetica","Arial", STHeiTi, sans-serif;
 }
 
+
+
+
 .header{
     width: 300px;
     height: 30px;
     margin: 20px auto;
     font-size: 26px;
     font-weight: bold;
+}
+.section{
+    height: 320px;
 }
 
 //QQ对话
@@ -346,3 +360,26 @@ body {
         left: 85px;
     }
 }
+
+// 判断是否为素数
+.isPrime{
+    width: 100%;
+    height: 60px;
+    padding-left: 30px;
+    em{
+        line-height: 60px;
+        display: block;
+        float: left;
+        margin-right: 20px;
+    }
+    input{
+        .border(4px);
+        line-height: 30px;
+        margin-top: 15px;
+        border: 1px solid #dddddd;
+        color: #333333;
+        text-indent: 10px;
+    }
+}
+
+
